application/influx-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: influxdb
  name: influxdb
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: influxdb
  serviceName: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      volumes:
      - name: persistent-storage-config
        persistentVolumeClaim:
          claimName: influxdb-ebs-claim-config
      - name: persistent-storage-data
        persistentVolumeClaim:
          claimName: influxdb-ebs-claim-data
      containers:
        - image:  influxdb:2.4
          volumeMounts:
          - name: persistent-storage-config
            mountPath: /etc/influxdb2
          - name: persistent-storage-data
            mountPath: /var/lib/influxdb2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: api
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: influxdb
          ports:
            - containerPort: 8086
              name: api
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: api
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
spec:
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
  type: NodePort
  selector:
    app: influxdb
